objects/tfn_Breach__c.object
<CustomObject>
    <fields>
        <fullName>Extent__c</fullName>
        <label>Extent</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                    <default>true</default>
                    <label>Low</label>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Significane_Rating_of_Impacted_Asset__c</fullName>
        <inlineHelpText>This is the significance of the Conservation Asset selected above that is on this covenant</inlineHelpText>
        <label>Significance Rating of Impacted Asset</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Very High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tfn_Area_Affected__c</fullName>
        <label>Area Affected (Ha)</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tfn_Authorities_Inf_Other__c</fullName>
        <label>Authorities Inf. Other</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_Authorities_Informed__c</fullName>
        <label>Authorities Informed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CMA</fullName>
                </value>
                <value>
                    <fullName>DELWP</fullName>
                </value>
                <value>
                    <fullName>Local council</fullName>
                </value>
                <value>
                    <fullName>Police</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tfn_Breach_Established__c</fullName>
        <label>Breach Established</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tfn_Yes_or_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tfn_Breach_ID__c</fullName>
        <displayFormat>BRCH{0000}</displayFormat>
        <label>Breach ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>tfn_Breach_Identified_By__c</fullName>
        <label>Breach Identified By</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Neighbour</fullName>
                    <color>#FFFFFF</color>
                    <label>Neighbour</label>
                </value>
                <value>
                    <fullName>Previous Covenantor</fullName>
                    <color>#FFFFFF</color>
                    <label>Previous Covenantor</label>
                </value>
                <value>
                    <fullName>Current Covenantor</fullName>
                    <color>#FFFFFF</color>
                    <label>Current Covenantor</label>
                </value>
                <value>
                    <fullName>CMA Staff</fullName>
                    <color>#FFFFFF</color>
                    <label>CMA Staff</label>
                </value>
                <value>
                    <fullName>TfN Staff</fullName>
                    <color>#FFFFFF</color>
                    <label>TfN Staff</label>
                </value>
                <value>
                    <fullName>DELWP Staff</fullName>
                    <color>#FFFFFF</color>
                    <label>DELWP Staff</label>
                </value>
                <value>
                    <fullName>Local Police</fullName>
                    <color>#FFFFFF</color>
                    <label>Local Police</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tfn_Breach_Impact__c</fullName>
        <label>Breach Impact</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tfn_Breach_Import_ID__c</fullName>
        <externalId>true</externalId>
        <label>Breach Import ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_Breach_Perpetrator__c</fullName>
        <label>Breach Perpetrator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Covenantor</fullName>
                    <color>#FFFFFF</color>
                    <label>Covenantor</label>
                </value>
                <value>
                    <fullName>Neighbour</fullName>
                    <color>#FFFFFF</color>
                    <label>Neighbour</label>
                </value>
                <value>
                    <fullName>Ecological Event</fullName>
                    <color>#FFFFFF</color>
                    <label>Ecological Event</label>
                </value>
                <value>
                    <fullName>3rd Party</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tfn_Breach_Resolved__c</fullName>
        <label>Breach Resolved</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tfn_Yes_or_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tfn_Breach_Severity__c</fullName>
        <label>Breach Severity</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                    <color>#FFFFFF</color>
                    <default>true</default>
                    <label>Low</label>
                </value>
                <value>
                    <fullName>Medium</fullName>
                    <color>#FFFFFF</color>
                    <label>Medium</label>
                </value>
                <value>
                    <fullName>High</fullName>
                    <color>#FFFFFF</color>
                    <label>High</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tfn_Breach_Stage__c</fullName>
        <label>Breach Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Potential</fullName>
                    <color>#FFFFFF</color>
                    <default>true</default>
                    <label>Potential</label>
                </value>
                <value>
                    <fullName>In Determination</fullName>
                    <color>#FFFFFF</color>
                    <label>In Determination</label>
                </value>
                <value>
                    <fullName>In Remediation</fullName>
                    <color>#FFFFFF</color>
                    <label>In Remediation</label>
                </value>
                <value>
                    <fullName>Resolved</fullName>
                    <color>#FFFFFF</color>
                    <label>Resolved</label>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                    <color>#FFFFFF</color>
                    <label>Rejected</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tfn_Conservation_Asset_Impacted__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Must know the Species/ EVC Observation Name (auto generated number) you are looking for. Search results will be based on what is currently available on the Interest.</inlineHelpText>
        <label>Conservation Asset Impacted</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>tfn_Species_EVC_Observation__c.tfn_Interest__c</field>
                <operation>equals</operation>
                <valueField>$Source.tfn_Interest__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>tfn_Species_EVC_Observation__c</referenceTo>
        <relationshipLabel>Breaches</relationshipLabel>
        <relationshipName>Breaches</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tfn_Date_Discovered__c</fullName>
        <label>Date Discovered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tfn_Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tfn_Interest__c</fullName>
        <label>Interest</label>
        <referenceTo>loc03__Easement_FeeTitle__c</referenceTo>
        <relationshipLabel>Breaches</relationshipLabel>
        <relationshipName>Breaches</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>tfn_Landholder_Comments__c</fullName>
        <label>Landholder Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tfn_Related_Intensive_Stewardship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Intensive Stewardship</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.tfn_Interest__c</field>
                <operation>equals</operation>
                <valueField>loc03__Monitoring__c.loc03__Easement_Fee_Title__c</valueField>
            </filterItems>
            <filterItems>
                <field>loc03__Monitoring__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Intensive Stewardship</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>loc03__Monitoring__c</referenceTo>
        <relationshipLabel>Breaches</relationshipLabel>
        <relationshipName>Breaches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tfn_Resolution__c</fullName>
        <label>Resolution</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tfn_Root_Cause_for_Breach__c</fullName>
        <label>Root Cause for Breach</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tfn_Scope__c</fullName>
        <label>Scope</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                    <default>true</default>
                    <label>Low</label>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Breach</label>
    <nameField>
        <label>Breach Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Breaches</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Enforce_Other_Text_Box_Completion</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( tfn_Authorities_Informed__c , &apos;Other&apos;), LEN( tfn_Authorities_Inf_Other__c )&lt;1)</errorConditionFormula>
        <errorDisplayField>tfn_Authorities_Inf_Other__c</errorDisplayField>
        <errorMessage>You need to enter Other Authorities Informed in the text box</errorMessage>
    </validationRules>
</CustomObject>